Fix page-wrap bug in chrome

--- a/app/styles/components/page/_open.scss
+++ b/app/styles/components/page/_open.scss
@@ -1,6 +1,6 @@
 %is-open {
   .Page-wrap {
-    height: 100vh;
+    height: 100%;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     position: fixed;
